--- a/blood4life-web/src/main/webapp/WEB-INF/web.xml
+++ b/blood4life-web/src/main/webapp/WEB-INF/web.xml
@@ -4,29 +4,38 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
             http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <display-name>Blood4lief Website</display-name>
+    <display-name>Blood4life Website</display-name>
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <!--<context-param>-->
-        <!--<param-name>spring.profiles.active</param-name>-->
-        <!--<param-value>openshift</param-value>-->
-    <!--</context-param>-->
 
-    <!-- Configure ContextLoaderListener to use JavaConfigWebApplicationContext
-             instead of the default XmlWebApplicationContext -->
-    <context-param>
-        <param-name>contextClass</param-name>
-        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-    </context-param>
+    <!--<filter>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--</filter>-->
+
+    <!--<filter-mapping>-->
+        <!--<filter-name>springSecurityFilterChain</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
+    <filter>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <url-pattern>/login/*</url-pattern>
+    </filter-mapping>
+
     <!-- Configuration locations must consist of one or more comma- or space-delimited
          fully-qualified @Configuration classes -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>be.dondesang.swliege.config.Blood4lifeApplicationConfig</param-value>
+        <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
-
 
     <servlet>
         <servlet-name>views</servlet-name>
@@ -48,20 +57,6 @@
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 
-    <session-config>
-        <session-timeout>30</session-timeout>
-    </session-config>
-
-    <!--&lt;!&ndash;        SPRING-SECURITY     &ndash;&gt;-->
-    <!--<filter>-->
-        <!--<filter-name>springSecurityFilterChain</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>springSecurityFilterChain</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
-
     <filter>
         <filter-name>charsetFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -79,7 +74,18 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/DefaultDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
