--- a/blood4life-web/pom.xml
+++ b/blood4life-web/pom.xml
@@ -13,7 +13,27 @@
     <name>Blood4life Website</name>
     <packaging>war</packaging>
 
+    <properties>
+        <hibernate.version>4.1.9.Final</hibernate.version>
+    </properties>
+
     <dependencies>
+        <!-- HIBERNATE -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
         <!--    SPRING  -->
         <dependency>
             <groupId>org.springframework</groupId>
