--- a/blood4life-web/src/main/webapp/WEB-INF/web.xml
+++ b/blood4life-web/src/main/webapp/WEB-INF/web.xml
@@ -74,6 +74,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/blood4life-social</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
